tests/baselines/reference/classExpressionWithStaticPropertiesES62(strict=true).errors.txt
classExpressionWithStaticPropertiesES62.ts(3,12): error TS7008: Member 'b' implicitly has an 'any' type.


==== classExpressionWithStaticPropertiesES62.ts (1 errors) ====
    var v = class C {
        static a = 1;
        static b
               ~
!!! error TS7008: Member 'b' implicitly has an 'any' type.
        static c = {
            x: "hi"
        }
        static d = C.c.x + " world";
     };